# dmenu-manager

./: .gitignore  Cargo.toml  README.md  \  shell.nix
.github/workflows/: rust.yml
mandwm/: Cargo.toml  README.md  config.toml
mandwm-api/: Cargo.toml  README.md
mandwm-api/macros/: Cargo.toml
mandwm-api/macros/src/: lib.rs
mandwm-api/src/: core.rs  lib.rs  tests.rs
mandwm-core/: Cargo.toml
mandwm-core/src/: lib.rs
mandwm-ffi/: Cargo.toml  README.md
mandwm-ffi/src/: lib.rs
mandwm/scripts/default/: power  time
mandwm/scripts/init/: README.md
mandwm/scripts/rust/: README.md
mandwm/scripts/shell/: README.md  date  power  time
mandwm/src/: core.rs  dbus.rs  main.rs  tests.rs  xfuncs.rs
src/: main.rs
