[package]
name = "mandwm-api"
version = "0.1.0"
authors = ["Tristan Zander <tristannzander@gmail.com>"]
edition = "2018"
description = "An api that manages the dwm bar and dmenu."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
macro = ["macros"]
bus = ["dbus"]
default = ["macro", "bus"]

[dependencies.dbus]
version = "0.8.4"
optional = true

[dependencies.macros]
path = "./macros"
optional = true
