[package]
name = "mandwm"
version = "0.1.0"
authors = ["Tristan Zander <tristannzander@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mandwm-api = { path = "../mandwm-api" }
dbus = { version = "0.8.4" }
x11 = { version = "2.18.2", features = ["xlib"] }
toml = { version = "0.5.6" }
tokio = { version = "0.3.1", features = ["full"] }
